# OOP_HW

./: README.MD  pyproject.toml
src/: category.py  main.py  product.py
tests/: conftest.py  test_category.py  test_products.py
